# ffmpegdevelop

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wangyuelin/ffmpegdevelop/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: decode_video.c  native-lib.cpp
app/src/main/java/com/wangyuelin/ffmpegdevelop/: MainActivity.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangyuelin/ffmpegdevelop/: ExampleUnitTest.java
